gccida/c0/rgn_print_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/sched-rgn.c:2648:1: error: use of undeclared identifier 'rgn_print_insn_tmp'; did you mean 'rgn_print_insn'?
rgn_print_insn_tmp, 
^~~~~~~~~~~~~~~~~~
rgn_print_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/sched-rgn.c:2643:14: note: 'rgn_print_insn' declared here
const char * rgn_print_insn( rtx insn, int aligned) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/sched-rgn.c:2656:10: error: use of undeclared identifier 'rgn_print_insn_tmp'; did you mean 'rgn_print_insn'?
sprintf( rgn_print_insn_tmp, "%d", insn->fld[0].rtuint); 
         ^~~~~~~~~~~~~~~~~~
         rgn_print_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/sched-rgn.c:2643:14: note: 'rgn_print_insn' declared here
const char * rgn_print_insn( rtx insn, int aligned) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/sched-rgn.c:2661:1: error: use of undeclared identifier 'rgn_print_insn_tmp'; did you mean 'rgn_print_insn'?
rgn_print_insn_tmp, 
^~~~~~~~~~~~~~~~~~
rgn_print_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/sched-rgn.c:2643:14: note: 'rgn_print_insn' declared here
const char * rgn_print_insn( rtx insn, int aligned) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/sched-rgn.c:2666:8: error: use of undeclared identifier 'rgn_print_insn_tmp'; did you mean 'rgn_print_insn'?
return rgn_print_insn_tmp; 
       ^~~~~~~~~~~~~~~~~~
       rgn_print_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/sched-rgn.c:2643:14: note: 'rgn_print_insn' declared here
const char * rgn_print_insn( rtx insn, int aligned) 
             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rgn_print_insn/src/obj/sched-rgn.o] Error 1
